Updating the repository

--- a/index.html
+++ b/index.html
@@ -274,14 +274,12 @@ body {
 
 /* Footer */
 .footer {
-  padding: 20px;
+  padding: 14px;
   text-align: center;
   background: #333;
-  position: relative;
-  left: -100px;
-  width: 108%;
-  top:50px;
-  bottom: -1100;
+  position: absolute;
+  width: 100vw;
+  left:0px;
 }
 
 </style>
@@ -438,7 +436,7 @@ body {
 </div>
 
 <div class="footer">
-  <p>Copyright: RAGHHAV D TURKI</p>
+  <p style="color: #f0eee7;">Copyright: RAGHHAV D TURKI</p>
 </div>
 </body>
 </html>
