Updating the repository

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ body {
 }
 .header img {
   float: left;
-  position: absolute;
+  position: relative;
   left: 20px;
-  top:40px;
+  top:5px;
   width: 130px;
   height: 130px;
 }
